refactor: apply SRP by removing business logic from repository
- Replaced validarLogin with findByUsername
- Repository now only handles data access